2011-11-22  Glenn Morris  <rgm@gnu.org>

	* rmailmm.el: New file, split from lisp/mail/rmailmm.el.

2011-11-20  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/semantic-utest-c.el (semantic-utest-c-comparisons): Fix typo.

2011-11-16  Juanma Barranquero  <lekktu@gmail.com>

	* automated/icalendar-tests.el (icalendar-tests--get-ical-event)
	(icalendar-tests--test-export, icalendar-tests--do-test-export):
	* cedet/srecode-tests.el (srecode-field-utest-impl): Fix typo.

2011-10-30  Ulf Jasper  <ulf.jasper@web.de>

	* automated/newsticker-tests.el
	(newsticker--group-manage-orphan-feeds): Removed fsetting of
	newsticker--treeview-tree-update.

2011-10-29  Ulf Jasper  <ulf.jasper@web.de>

	* automated/newsticker-tests.el
	(newsticker--group-manage-orphan-feeds): Use fset instead of flet.

	* trunk/test/automated/newsticker-tests.el
	(newsticker--group-manage-orphan-feeds): Prevent updating
	newsticker treeview. Fixed bug#9763.

2011-10-20  Glenn Morris  <rgm@gnu.org>

	* automated/vc-bzr.el (vc-bzr-test-bug9781): New test.

	* automated/vc-bzr.el: New file.

2011-10-15  Glenn Morris  <rgm@gnu.org>

	* automated/f90.el: New file.

2011-09-27  Ulf Jasper  <ulf.jasper@web.de>

	* automated/newsticker-tests.el: Move newsticker-testsuite.el
	to automated/newsticker-tests.el. Convert to ERT.

2011-07-26  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar-tests--compare-strings):
	Removed, simply use string=.
	(icalendar--diarytime-to-isotime)
	(icalendar--datetime-to-diary-date)
	(icalendar--datestring-to-isodate)
	(icalendar--format-ical-event)
	(icalendar--parse-summary-and-rest)
	(icalendar-tests--do-test-import)
	(icalendar-tests--do-test-cycle) : Changed argument order of
	string= to EXPECTED ACTUAL.
	(icalendar--import-format-sample)
	(icalendar--format-ical-event)
	(icalendar-import-non-recurring)
	(icalendar-import-rrule)
	(icalendar-import-duration)
	(icalendar-import-bug-6766)
	(icalendar-real-world): Adjusted to string= instead of